<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2018 Manuel Roedig / Phash
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>

    <string name="app_name">SEMUX</string>
    <string name="balance">Balance</string>
    <string name="address">Address</string>
    <string name="Available">Available</string>
    <string name="locked">Locked</string>
    <string name="pending">Pending TX</string>
    <string name="check">Check</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="publicKey">Public Key</string>
    <string name="privateKey">Private Key</string>
    <string name="newAccount">new Account</string>
    <string name="accounts">Accounts</string>
    <string name="vote">Vote</string>
    <string name="AmountTOSend">Amount to Send</string>
    <string name="ReceivingAddress">Receiving Address</string>
    <string name="feeExplain">The fee for sending a transaction is 0.005 SEM</string>
    <string name="Total">Total:</string>
    <string name="TotalLocked">Locked:</string>
    <string name="storeSecure">Write down your private key!</string>
    <string name="generate">Generate</string>
    <string name="viewTransactions">Transactions</string>
    <string name="AmountTOVote">Amount to vote/unvote</string>
    <string name="delegatesAddress">Delegate\'s address</string>
    <string name="from">from:</string>
    <string name="to">to:</string>
    <string name="amount">amount:</string>
    <string name="date">Date</string>
    <string name="type">Type:</string>
    <string name="importText">Import</string>
    <string name="unvote">Unvote</string>
    <string name="importKey">Import Key</string>
    <string name="dashboardHead">SEMUX</string>
    <string name="lightweight">LIGHTWEIGHT WALLET</string>
    <string name="free">The use of this wallet is absolutely free of charge!</string>
    <string name="semux">Semux is a revolutionary, experimental crypto-blockchain. This wallet enables you to interact with this blockchain! Keep all your secret keys private! Save them! And never tell anyone about your keys!</string>
    <string name="onlyAddress">Only share addresses! Period!</string>
    <string name="createIfEmpty">you do not have an account here:</string>
    <string name="createAcc">Create Account</string>
    <string name="balances">Balances</string>
    <string name="save">save</string>
    <string name="noTransactionsText">There are no transactions for this address!</string>
    <string name="poweredByPhash">Powered by Phash.de</string>
    <string name="contribute">Feel free to contribute to this open source project. You find it on https://github.com/phash/ASW</string>
    <string name="credits">CREDITS</string>
    <string name="semuxOrg">www.semux.org</string>
    <string name="api">API Node by honeycrpto semux.info</string>
    <string name="security">Always back up your private keys!\nNever tell them anybody!\nWe cannot recover your keys!\nKeep them save!</string>
    <string name="wishes">For wishes, feature request or issues please use github</string>
    <string name="dashboard">Dashboard</string>
    <string name="credit">Credits</string>
    <string name="newPassword">Set a new password for sending, voting and exporting keys</string>
    <string name="password">Password</string>
    <string name="repeat">Repeat Password</string>
    <string name="preference_file_key">password</string>
    <string name="enterCurrentPass">Enter current password</string>
    <string name="setPassword">set password</string>
    <string name="settings">Settings</string>
    <string name="remindPasswordStrength">Use a strong password! \nWrite it down and don\'t forget it! \nThere is no way we can recover your account!</string>
    <string name="beCareful">Be careful with changing the settings!</string>
    <string name="keepSave">Always keep your keys save!\nWrite them down! \nNever tell them anybody! \nYour private key is the key to your funds! \nOnly share your address for receiving funds!</string>
    <string name="hire">Hire the Dev!\nAre you in need of a Android-Developer for your app?\nDo you need a discord-bot? \ncall me: phash@phash.de</string>
    <string name="name">Name</string>
    <string name="votes">Votes</string>
    <string name="myVotes">by me</string>
    <string name="QRHint">QR Address code</string>
    <string name="exportKeys">export keys</string>
    <string name="manageAccs">manage accounts</string>
    <string name="removeAccount">Remove Account</string>
    <string name="tx">TX Count</string>
    <string name="pendingTx">Pending</string>
    <string name="setPW">set password</string>
    <string name="buy">get SEMUX</string>
    <string name="fee">transaction fee</string>
    <string name="votesMyBe">Votes I made</string>
    <string name="rank">delegates rank</string>
    <string name="copyAddress">Copy address</string>
    <string name="copyPrivKey">copy private key</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="SEM">SEM</string>
    <string name="selectDelegate">select delegate</string>
    <string name="error">Error</string>
    <string name="report">Report</string>
    <string name="title_activity_new_main">NewMainActivity</string>
    <string name="sem">SEM</string>
    <string name="select_own">Select own votes</string>
    <string name="selected_own">only my votes</string>
    <string name="select_all">select all votes</string>

    <string name="showing_code_in_fragment">Showing code in fragment</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="empty">---</string>
    <string name="site_name">Site Name</string>
    <string name="scan_a_code">Scan a QR Code</string>
    <string name="result_not_found">Result Not Found</string>
    <string name="show_scanner_from_fragment">Show Scanner From Fragment</string>
    <string name="pickNetwork">SELECT NETWORK</string>
    <string name="pickAPI">SELECT ENDPOINT</string>
    <string name="semuxMain">SEMUX - MAINNET</string>
    <string name="semuxTest">SEMUX - TESTNET</string>
    <string name="currPrice">current Price:</string>
    <string name="join_discord">join discord</string>
    <string name="loading">loading</string>
</resources>
